package de.raywo.banking.domain;

public enum AccountStatus {

  ACTIVE,
  INACTIVE

}
