package de.raywo.banking.system;

public class NotFoundException extends Exception {
  public NotFoundException(String message) {
    super(message);
  }
}
