@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

' ════════════════════════════════════════════
'  Domain Package
' ════════════════════════════════════════════

package "de.raywo.banking.domain" {

  interface Identifiable<T> {
    + getId(): T
  }

  enum AccountStatus {
    ACTIVE
    INACTIVE
  }

  class Money <<record>> {
    - amount: BigDecimal
    - currency: Currency
    + {static} euroOf(amount: BigDecimal): Money
    + {static} zeroEuro(): Money
    + add(other: Money): Money
    + subtract(other: Money): Money
  }

  class Customer {
    - id: UUID
    - name: String
    - city: String
    + getName(): String
    + setName(name: String): void
    + getCity(): String
    + setCity(city: String): void
    + getId(): UUID
  }

  abstract class Account {
    - iban: String
    - balance: Money
    - owner: Customer
    - status: AccountStatus
    - transactions: List<Transaction>
    + getId(): String
    + getIban(): String
    + getBalance(): Money
    + getOwner(): Customer
    + setOwner(owner: Customer): void
    + getStatus(): AccountStatus
    + setStatus(status: AccountStatus): void
    + getTransactions(): List<Transaction>
    + makeTransaction(transaction: Transaction): void
    ~ deposit(amount: Money): void
    ~ withdraw(amount: Money): void
    # isAmountAvailable(amount: Money): boolean
  }

  class CurrentAccount {
    - debitInterestRate: float
    - limit: Money
    + getDebitInterestRate(): float
    + setDebitInterestRate(debitInterestRate: float): void
    + getLimit(): Money
    + setLimit(limit: Money): void
    # isAmountAvailable(amount: Money): boolean
  }

  class SavingsAccount {
    - creditInterestRate: float
    + getCreditInterestRate(): float
    + setCreditInterestRate(creditInterestRate: float): void
  }

  abstract class Transaction <<sealed>> {
    - iban: String
    - purpose: String
    - amount: Money
    - timestamp: Instant
    + getIban(): String
    + getPurpose(): String
    + getAmount(): Money
    + getTimestamp(): Instant
    + {abstract} applyTo(account: Account): void
    + {abstract} getSymbol(): String
  }

  class Deposit <<final>> {
    + applyTo(account: Account): void
    + getSymbol(): String
  }

  class Withdrawal <<final>> {
    + applyTo(account: Account): void
    + getSymbol(): String
  }

  class AccountMismatchException <<Exception>>
  class InsufficientFundsException <<Exception>>
  class CurrencyMismatchException <<RuntimeException>>

  ' Domain-interne Beziehungen
  Identifiable <|.. Account
  Identifiable <|.. Customer

  Account <|-- CurrentAccount
  Account <|-- SavingsAccount

  Transaction <|-- Deposit
  Transaction <|-- Withdrawal

  Account "1" *-- "0..*" Transaction : transactions
  Account "0..*" --> "1" Customer : owner
  Account --> AccountStatus : status
  Account --> Money : balance
  CurrentAccount --> Money : limit
  Transaction --> Money : amount
}

' ════════════════════════════════════════════
'  Persistence Package
' ════════════════════════════════════════════

package "de.raywo.banking.persistence" {

  interface "Storage<Id, T>" as Storage {
    + saveAll(entity: Map<Id, T>): void
    + readAll(): Map<Id, T>
  }

  interface "Repository<Id, T>" as Repository {
    + save(entity: T): void
    + findById(id: Id): Optional<T>
    + findAll(): Collection<T>
    + delete(entity: T): void
    + deleteAll(): void
    + count(): int
    + persist(): void
    + initialize(): void
  }

  abstract class "AbstractMapBasedRepository<Id, T>" as AbstractMapBasedRepository {
    # storage: Storage<Id, T>
    # entityMap: Map<Id, T>
    + findById(id: Id): Optional<T>
    + save(entity: T): void
    + findAll(): Collection<T>
    + delete(entity: T): void
    + deleteAll(): void
    + count(): int
    + persist(): void
    + initialize(): void
  }

  class AccountRepository {
    + AccountRepository(storage: Storage<String, Account>)
  }

  class CustomerRepository {
    + CustomerRepository(storage: Storage<UUID, Customer>)
  }

  class "FileStorage<Id, T>" as FileStorage {
    - path: String
    + FileStorage(path: String)
    + saveAll(collection: Map<Id, T>): void
    + readAll(): Map<Id, T>
  }

  ' Persistence-interne Beziehungen
  Repository <|.. AbstractMapBasedRepository
  Storage <|.. FileStorage

  AbstractMapBasedRepository <|-- AccountRepository
  AbstractMapBasedRepository <|-- CustomerRepository

  AbstractMapBasedRepository --> Storage : storage
}

' ════════════════════════════════════════════
'  System Package
' ════════════════════════════════════════════

package "de.raywo.banking.system" {

  class SiBank {
    - name: String {final}
    - city: String {final}
    - bic: String {final}
    - accountRepository: Repository<String, Account>
    - customerRepository: Repository<UUID, Customer>
    + {static} initialize(name: String, city: String, bic: String): void
    + {static} getInstance(): SiBank
    + getName(): String
    + getCity(): String
    + getBic(): String
    + getAccounts(): Collection<Account>
    + getCustomers(): Collection<Customer>
    + addAccount(account: Account): void
    + getAccount(iban: String): Account
    + addCustomer(customer: Customer): void
    + persist(): void
  }

  class NotFoundException <<Exception>>
}

' ════════════════════════════════════════════
'  Main
' ════════════════════════════════════════════

package "de.raywo.banking" {
  class Main {
    + {static} main(args: String[]): void
    - {static} initializeData(bank: SiBank): void
  }
}

' ════════════════════════════════════════════
'  Paketübergreifende Beziehungen
' ════════════════════════════════════════════

Repository ..> Identifiable : <<bound>>\nT extends Identifiable

AccountRepository ..> Account
CustomerRepository ..> Customer

SiBank --> Repository
SiBank ..> Account
SiBank ..> Customer
SiBank ..> NotFoundException : <<throws>>

Main --> SiBank

@enduml
